# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20220318065339_create_subscriptions_table.sql  20220403180529_make_status_not_null_in_subscriptions.sql  20220403184830_create_subscription_tokens_table.sql  20220411163321_create_users_table.sql  20220412064017_rename_password_column.sql  20220412173842_add_salt_to_users.sql  20220412184225_remove_salt_from_users.sql  20220417164954_seed_user.sql  20220424165821_create_idempotency_table.sql  20220427164240_relax_null_checks_on_idempotency.sql  20220513082310_create_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: home.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
